@@ -1,0 +1,531 @@
+begin_unit|revision:1.0.0;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/*  * This file is subject to the license found in LICENCE.TXT in the root directory of the project.  *   * #SNAPSHOT#  */
+end_comment
+
+begin_package
+package|package
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|ant
+package|;
+end_package
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|File
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
+name|MalformedURLException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|text
+operator|.
+name|ParseException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|tools
+operator|.
+name|ant
+operator|.
+name|BuildException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|tools
+operator|.
+name|ant
+operator|.
+name|Project
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|Ivy
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|ModuleDescriptor
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|Configuration
+operator|.
+name|Visibility
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|xml
+operator|.
+name|XmlModuleDescriptorParser
+import|;
+end_import
+
+begin_class
+specifier|public
+class|class
+name|IvyInfo
+extends|extends
+name|IvyTask
+block|{
+specifier|private
+name|File
+name|_file
+init|=
+literal|null
+decl_stmt|;
+specifier|public
+name|File
+name|getFile
+parameter_list|()
+block|{
+return|return
+name|_file
+return|;
+block|}
+specifier|public
+name|void
+name|setFile
+parameter_list|(
+name|File
+name|file
+parameter_list|)
+block|{
+name|_file
+operator|=
+name|file
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|execute
+parameter_list|()
+throws|throws
+name|BuildException
+block|{
+name|Ivy
+name|ivy
+init|=
+name|getIvyInstance
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|_file
+operator|==
+literal|null
+condition|)
+block|{
+name|_file
+operator|=
+operator|new
+name|File
+argument_list|(
+name|getProject
+argument_list|()
+operator|.
+name|getBaseDir
+argument_list|()
+argument_list|,
+name|getProperty
+argument_list|(
+name|ivy
+argument_list|,
+literal|"ivy.dep.file"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+try|try
+block|{
+name|ModuleDescriptor
+name|md
+init|=
+name|XmlModuleDescriptorParser
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|parseDescriptor
+argument_list|(
+name|ivy
+argument_list|,
+name|_file
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|doValidate
+argument_list|(
+name|ivy
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|getProject
+argument_list|()
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.organisation"
+argument_list|,
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+operator|.
+name|getOrganisation
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|getProject
+argument_list|()
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.module"
+argument_list|,
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+operator|.
+name|getRevision
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|getProject
+argument_list|()
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.revision"
+argument_list|,
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+operator|.
+name|getRevision
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|getProject
+argument_list|()
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.revision"
+argument_list|,
+literal|"working@"
+operator|+
+name|Ivy
+operator|.
+name|getLocalHostName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|getProject
+argument_list|()
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.configurations"
+argument_list|,
+name|mergeConfs
+argument_list|(
+name|md
+operator|.
+name|getConfigurationsNames
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// store the public configurations in a separate property
+name|Configuration
+index|[]
+name|configs
+init|=
+name|md
+operator|.
+name|getConfigurations
+argument_list|()
+decl_stmt|;
+name|List
+name|publicConfigsList
+init|=
+operator|new
+name|ArrayList
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|configs
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+if|if
+condition|(
+name|Visibility
+operator|.
+name|PUBLIC
+operator|.
+name|equals
+argument_list|(
+name|configs
+index|[
+name|i
+index|]
+operator|.
+name|getVisibility
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|publicConfigsList
+operator|.
+name|add
+argument_list|(
+name|configs
+index|[
+name|i
+index|]
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|String
+index|[]
+name|publicConfigs
+init|=
+operator|(
+name|String
+index|[]
+operator|)
+name|publicConfigsList
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|String
+index|[
+name|publicConfigsList
+operator|.
+name|size
+argument_list|()
+index|]
+argument_list|)
+decl_stmt|;
+name|getProject
+argument_list|()
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.public.configurations"
+argument_list|,
+name|mergeConfs
+argument_list|(
+name|publicConfigs
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|MalformedURLException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|BuildException
+argument_list|(
+literal|"unable to convert given ivy file to url: "
+operator|+
+name|_file
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|ParseException
+name|e
+parameter_list|)
+block|{
+name|log
+argument_list|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|,
+name|Project
+operator|.
+name|MSG_ERR
+argument_list|)
+expr_stmt|;
+throw|throw
+operator|new
+name|BuildException
+argument_list|(
+literal|"syntax errors in ivy file"
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|BuildException
+argument_list|(
+literal|"impossible to resolve dependencies: "
+operator|+
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+block|}
+block|}
+end_class
+
+end_unit
+
