@@ -16,4 +16,5 @@
 	<taskdef name="install" classname="fr.jayasoft.ivy.ant.IvyInstall"/>
 	<taskdef name="convertpom" classname="fr.jayasoft.ivy.ant.IvyConvertPom"/>
 	<taskdef name="artifactreport" classname="fr.jayasoft.ivy.ant.IvyArtifactReport"/>
+  <taskdef name="info" classname="fr.jayasoft.ivy.ant.IvyInfo"/>
 </antlib>
