@@ -46,6 +46,7 @@ Changes:
   - FIX: Delivered Ivy files with incomplete last line. (IVY-125) (thanks to Matthias Kilian)
 
 * thanks to Maarten Coene:
+  - NEW: Add Ant task to retrieve information from an Ivy file without doing a resolve (IVY-255)
   - NEW: add option to cachepath task to create a path with local artifact paths (IVY-221)
   - NEW: allow extending configurations to override the mapping of their super configurations (IVY-218)
 
